"little typing mistake"

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
       <p>Clipboard allows you to track and organize everything you 
       copy. Instantly <br> access your clipboard on all your devices.</p>
 
-      <bottun class="bottun ios-bottun">Download for iOS</bottun>
-      <bottun class="bottun mac-bottun">Download for Mac</bottun>
+      <button class="button ios-button">Download for iOS</button>
+      <button class="button mac-button">Download for Mac</button>
+
     </header>
      
     <section>
@@ -113,8 +114,8 @@
 
       <p><snap></snap>Available for free on the App Store. Download for Mac or iOS, sync with iCloud and</snap> <snap>you’re ready to start adding to your clipboard.</snap></p>
 
-      <bottun class="bottun ios-bottun">Download for iOS</bottun>
-      <bottun class="bottun mac-bottun">Download for Mac</bottun>
+      <button class="button ios-button">Download for iOS</button>
+      <button class="button mac-button">Download for Mac</button>
 
     </section>
 
