--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://github.com/hamidMolaDev">@hamidMolaDev</a>.
+      Coded by <a href="https://github.com/hamidMolaDev" target="_blank">@hamidMolaDev</a>.
     </p>
   </footer>
 </body>
